--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body class="d-flex flex-column vh-100">
+  <!-- Header -->
   <header class="jumbotron jumbotron-fluid text-white bg-dark p-2 weather-header">
     <div class="container-fluid text-center">
       <h1 class="display-4 font-weight-bold">Weather Dashboard</h1>
@@ -23,10 +24,11 @@
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
+      <!-- Left Column -->
       <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
+        <h2 id="form-heading" class="mt-1 h3 form-label">Search for a City:</h2>
+
+        <!-- City Search Form -->
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
@@ -44,9 +46,65 @@
         <div class="list-group" id="history"></div>
       </aside>
 
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+      <!-- Right Column -->
+      <div class="col-12 col-md-12 col-lg-9">
+        <!-- Main Card -->
+        <section id="today" class="mt-3" role="region" aria-live="polite">
+          dce
+        </section>
+
+        <!-- 5-Day Forecast -->
+        <section id="forecast" class="container col-12 d-flex" role="region" aria-live="polite">
+          <div class="row d-flex justify-content-around m-1">
+            <h3 class="col-12">5-Day Forecast:</h3>
+
+            <!-- DAY 1 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
+            </div>
+
+            <!-- DAY 2 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
+            </div>
+
+            <!-- DAY 3 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
+            </div>
+
+            <!-- DAY 4 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
+            </div>
+
+            <!-- DAY 5 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
+            </div>
+
+          </div>
+        </section>
       </div>
     </div>
   </div>
