--- a/index.html
+++ b/index.html
@@ -1,116 +1,153 @@
-<!-- HTML Declaration -->
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en">
 
-<!-- Head Section -->
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <!-- CSS Link -->
-  <link rel="stylesheet" href="./assets/css/style.css"/>
-  <!-- Bootstrap Links -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☀️</text></svg>">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Weather Dashboard</title>
 </head>
 
-<!-- Body Section -->
-<body>
-
-  <!-- Header Section -->
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
+<body class="d-flex flex-column vh-100">
+  <header class="jumbotron jumbotron-fluid custom-jumbotron text-light">
+    <div class="container-fluid text-center">
+      <h1 class="display-4">Weather Dashboard</h1>
+      <p class="lead">All the weather info you need, without the news!</p>
+    </div>
   </header>
 
-  <!-- Main Body -->
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
+  <div class="container-fluid weather-container">
     <div class="row">
-      <aside id="screen-top" class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
 
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="Search City"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
+      <!-- LEFT COLUMN -->
+      <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+        <div id="search-card" class="card px-4 py-4 bg-dark text-light">
+          <h2>Search for a City:</h2>
+
+          <!-- CITY SEARCH FORM -->
+          <form class="border-bottom mb-2">
+            <input type="text" class="form-control mb-2" id="city-search" placeholder="Enter a City" autocomplete="off">
+            <button class="btn btn-primary btn-block mb-2" id="city-search-btn">Search</button>
+          </form>
+
+          <!-- SEARCH HISTORY BUTTONS -->
+          <div id="search-buttons"></div>
+        </div>
+      </div>
+
+      <!-- RIGHT COLUMN -->
+      <div class="col-12 col-md-12 col-lg-9">
+        <div class="row p-3 m-1">
+          <!-- MAIN CARD -->
+          <div id="main-card" class=" card col-12 text-light p-3">
+            <div class="row">
+              <div class="col-12 col-lg-4 text-center p-4">
+                <h2><span id="main-card-city"></span> <span id="main-card-date"></span></h2>
+                <img id="main-card-icon">
+              </div>
+              <div class="col-12 col-lg-8 d-flex align-items-center justify-content-between">
+
+                <div class="container">
+                  <div class="row d-flex justify-content-around">
+                    <div class="main-text col-12 col-lg-2 text-center border rounded m-2 p-2">
+                      <p>Temp:</p>
+                      <span id="main-card-temp"></span>
+                    </div>
+                    <div class="main-text col-12 col-lg-2 text-center border rounded m-2 p-2">
+                      <p>Wind:</p>
+                      <span id="main-card-wind"></span>
+                    </div>
+                    <div class="main-text col-12 col-lg-2 text-center border rounded m-2 p-2">
+                      <p>Humidity:</p>
+                      <span id="main-card-humidity"></span>
+                    </div>
+                    <div class="main-text col-12 col-lg-2 align-self-center">
+                      <a href="https://www.epa.gov/sunsafety/uv-index-scale-0" target="_blank">
+                        <p>UVI: <span id="main-card-uv"></span></p>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
-        </form>
-        <div id="button-section">
-          <button class="city-button" id="berlin">Berlin</button>
-          <button class="city-button" id="paris">Paris</button>
-          <button class="city-button" id="edinburgh">Edinburgh</button>
-          <button class="city-button" id="madrid">Madrid</button>
-          <button class="city-button" id="birmingham">Birmingham</button>
-          <button class="city-button" id="london">London</button>
         </div>
-        <div class="list-group" id="history"></div>
-      </aside>
+        <!-- 5-DAY FORECAST -->
 
-      <div class="col-lg-9 pb-3 ">
-        <section id="today" class="row mt-3" role="region" aria-live="polite">
-          <span id="city-date" class="cityDate">01/01/2023</span>
-          <h1 id="city-name" class="cityName">London</h1>
-          <p id="today-temperature"></p>
-          <p id="today-wind"></p>
-          <p id="today-humidity"></p>
-        </section>
+        <div class="container col-12 d-flex">
+          <div class="row d-flex justify-content-around m-1">
+            <h3 class="col-12">5-Day Forecast</h3>
+            <!-- DAY 1 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
+            </div>
 
-        <section id="forecast" class="container row mt-3" role="region" aria-live="polite">
-          <h1 class="row">5 Day Forecast:</h1>
-          <div class="row">
-            <div class="forecast-box col" id="day-plus-1">
-              <h4 id="day-plus-1-date"></h4>
-              <p id="day-plus-1-temperature"></p>
-              <p id="day-plus-1-wind"></p>
-              <p id="day-plus-1-humidity"></p>
+            <!-- DAY 2 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
             </div>
-            <div class="forecast-box col" id="day-plus-2">
-              <h4 id="day-plus-2-date"></h4>
-              <p id="day-plus-2-temperature"></p>
-              <p id="day-plus-2-wind"></p>
-              <p id="day-plus-2-humidity"></p>
+
+            <!-- DAY 3 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
             </div>
-            <div class="forecast-box col" id="day-plus-3">
-              <h4 id="day-plus-3-date"></h4>
-              <p id="day-plus-3-temperature"></p>
-              <p id="day-plus-3-wind"></p>
-              <p id="day-plus-3-humidity"></p>
+
+            <!-- DAY 4 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
             </div>
-            <div class="forecast-box col" id="day-plus-4">
-              <h4 id="day-plus-4-date"></h4>
-              <p id="day-plus-4-temperature"></p>
-              <p id="day-plus-4-wind"></p>
-              <p id="day-plus-4-humidity"></p>
-            </div>
-            <div class="forecast-box col" id="day-plus-5">
-              <h4 id="day-plus-5-date"></h4>
-              <p id="day-plus-5-temperature"></p>
-              <p id="day-plus-5-wind"></p>
-              <p id="day-plus-5-humidity"></p>
+
+            <!-- DAY 5 -->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-2 card text-light p-2 m-1 forecast-card">
+              <h4 class="forecast-date"></h4>
+              <img class="forecast-icon">
+              <p>Temp: <span class="forecast-temp"></span></p>
+              <p>Wind: <span class="forecast-wind"></span></p>
+              <p>Humidity: <span class="forecast-humidity"></span></p>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </div>
   </div>
 
-  <!-- API Links -->
-  <!-- Moment.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- My JavaScript -->
+  <footer>
+    <a href="https://www.github.com/awidener3" target="_blank" rel="noopener noreferrer"><img
+        src="./assets/images/GitHub-Mark-Light-64px.png" alt="GitHub logo"></a>
+  </footer>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+    crossorigin="anonymous"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
